Bug 218954 - Laptop Internal keyboard not working on ASUS Vivobook N6506MU on ubuntu and Manjaro
Summary: Laptop Internal keyboard not working on ASUS Vivobook N6506MU on ubuntu and M...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-11 16:19 UTC by Jean-Claude Charrier
Modified: 2024-07-06 18:34 UTC (History)
3 users (show)

See Also:
Kernel Version: 6.8.0-22-generic Ubuntu and 6.10.0-RC3-1-MANJARO
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Fix keyboard on Asus Vivobook Pro N6506MU (1.17 KB, patch)
2024-06-30 16:23 UTC, Tamim Khan
Details | Diff
attachment-3882-0.html (1.42 KB, text/html)
2024-07-03 14:28 UTC, Jean-Claude Charrier
Details

Description Jean-Claude Charrier 2024-06-11 16:19:11 UTC
Hi,

This bug is the same as #21365 https://bugzilla.kernel.org/show_bug.cgi?id=218745 . The laptop internal keyboard is not working at all on Vivobook 15 PRO N6506MU. The problem is identical in every way, except for the model name (this laptop is a less powerful version of the Vivo 15) 

Computer details:
Base Board Information
	Manufacturer: ASUSTeK COMPUTER INC.
	Product Name: N6506MU
	Version: 1.0

Output of DSDT :

grep -A 40 PS2K dsdt.dsl | grep IRQ -A 1
        IRQ (Level, ActiveLow, Exclusive, )
            {1}
Comment 1 Jean-Claude Charrier 2024-06-11 16:25:42 UTC
I can suppose something like :

	{
		/* Asus Vivobook Pro N6506MU */
		.matches = {

		        DMI_MATCH(DMI_SYS_VENDOR, "ASUSTeK COMPUTER INC."),

			DMI_MATCH(DMI_BOARD_NAME, "N6506MU"), 	

		},

	},
Comment 2 Amber Connelly 2024-06-20 21:56:49 UTC
Also same as this one:
https://bugzilla.kernel.org/show_bug.cgi?id=218929
Comment 3 Tamim Khan 2024-06-30 16:23:45 UTC
Created attachment 306518 [details]
Fix keyboard on Asus Vivobook Pro N6506MU

@Lefteris and @ Jean-Claude Charrier: I have attached a patch that should work on 6.8+ kernels. Would either of you mind testing and verifying that it works as expected?

If everything looks good, I can get this submitted upstream sometime tomorrow.

Thanks,
Tamim
Comment 4 eleftherios.giapitzakis 2024-07-02 12:16:08 UTC
Dear Tamim,

Compiled today 6.9.7 and applied it to POP!OS, all working perfect.

Once again thanks for your assistannce!

Lefteris
Comment 5 Tamim Khan 2024-07-02 21:25:46 UTC
Just to give an update, looks the patch will be present in the 6.11 kernel: https://lore.kernel.org/linux-acpi/CAJZ5v0iHVx+7Z2QTRncZPGZg4_F7DPQojFrE43qXuqaaWn=QdQ@mail.gmail.com/T/#m47de45b90240326eecfb19ed03ebe15d60f5938d
Comment 6 Jean-Claude Charrier 2024-07-03 14:28:18 UTC
Created attachment 306526 [details]
attachment-3882-0.html

Hi, tested with 6.9.7 on Manjaro: everything is perfect, thank you very much

Le dim. 30 juin 2024, 12 h 23, <bugzilla-daemon@kernel.org> a écrit :

> https://bugzilla.kernel.org/show_bug.cgi?id=218954
>
> --- Comment #3 from Tamim Khan (tamim@fusetak.com) ---
> Created attachment 306518 [details]
>   --> https://bugzilla.kernel.org/attachment.cgi?id=306518&action=edit
> Fix keyboard on Asus Vivobook Pro N6506MU
>
> @Lefteris and @ Jean-Claude Charrier: I have attached a patch that should
> work
> on 6.8+ kernels. Would either of you mind testing and verifying that it
> works
> as expected?
>
> If everything looks good, I can get this submitted upstream sometime
> tomorrow.
>
> Thanks,
> Tamim
>
> --
> You may reply to this email to add a comment.
>
> You are receiving this mail because:
> You reported the bug.
Comment 7 Amber Connelly 2024-07-05 21:00:31 UTC
Keyboard still not working on ASUS Vivobook Pro 15 OLED (Q543M) on kernel 6.9.7 (from Fedora Rawhide).
also commented here: https://bugzilla.kernel.org/show_bug.cgi?id=218929#c5
Comment 8 Amber Connelly 2024-07-06 18:34:07 UTC
My attached command output on this comment may also be relevant.
https://bugzilla.kernel.org/show_bug.cgi?id=218929#c7

Note You need to log in before you can comment on or make changes to this bug.